added some StaticSideEffects tests, but did not introduce that code; that's for later